# ROVI1_Final

./: README.md
PA10WorkCell/PA10WorkCell/: Release
SamplePluginPA10(1)/SamplePluginPA10/: CMakeLists.txt  CMakeLists.txt.own  CMakeLists.txt.user.477b94d
SamplePluginPA10(1)/SamplePluginPA10-build/: CMakeCache.txt  Makefile  RoVi1PluginPA10.cbp  cmake_install.cmake  qrc_resources.cpp
SamplePluginPA10(1)/SamplePluginPA10-build/src/: moc_SamplePlugin.cpp  moc_SamplePlugin.cpp_parameters
SamplePluginPA10(1)/SamplePluginPA10/backgrounds/: white.ppm
SamplePluginPA10(1)/SamplePluginPA10/src/: SamplePlugin.cpp  SamplePlugin.hpp  Vision.cpp  Vision.hpp
Vision/: CMakeLists.txt  Vision.cpp  Vision.hpp  main.cpp
Vision-build/: CMakeCache.txt  Makefile  ROVI_FinalVision  ROVI_FinalVision.cbp  cmake_install.cmake
